# msquic

./: .gitmodules  CMakeLists.txt  Cargo.toml  cifra.kernel.vcxproj  msquic.kernel.sln  picotls-minicrypto.kernel.vcxproj
.github/workflows/: cargo.yml
data/main/4fa54d9/: wan_data.json
data/main/5eaf396/: wan_data.json
data/main/77af914/: wan_data.json
data/main/ed6ac58/: wan_data.json
data/main/f6c47e7/: wan_data.json
docs/: OpenSSL and QUIC Side Meeting.ics
msquicdocs/: README.html  index.html
msquicdocs/docs/: API.html  Architecture.html  BUILD.html  CIBIR.html  CredScan.html  Deployment.html  Development.html  Diagnostics.html  Execution.html  FAQ.html  FIPS.html  InteropServerSetup.html  OpenSSLSymbolPrefix.html  PGO.html  Platforms.html  PreviewFeatures.html  QTIP.html  ReceiveBuffer.html  Release.html  Sample.html  Settings.html  Streams.html  TEST.html  TLS.html  TSG.html  TaskManagement.html  ThreatModel.html  TroubleshootingGuide.html  Versions.html  XDP.html
msquicdocs/docs/api/: ConfigurationClose.html  ConfigurationLoadCredential.html  ConnectionOpen.html  (+55 more)
scripts/: build.ps1  build.rs  clog.inputs  get-buildconfig.ps1
src/: lib.rs
src/core/: CMakeLists.txt  binding.c  binding.h  cid.h  connection.c  connection.h  crypto.c  crypto_tls.c  frame.c  frame.h  inline.c  library.h  lookup.c  lookup.h  loss_detection.c  operation.h  packet.c  packet.h  packet_builder.c  packet_builder.h  path.c  path.h  pathid.c  pathid.h  pathid_set.c  pathid_set.h  precomp.h  quicdef.h  send.c  send.h  sent_packet_metadata.h  settings.c  settings.h  stream_recv.c  transport_params.h  version_neg.c  worker.c  worker.h
src/ffi/: linux_bindings.rs  mod.rs  win_bindings.rs
src/inc/: msquic.h  msquic.hpp  msquicp.h  quic_platform.h  quic_versions.h
src/manifest/: clog.sidecar
src/platform/: CMakeLists.txt  datapath_winkernel.c  platform-picotls.kernel.vcxproj  tls_picotls.c
src/rs/: settings.rs  types.rs
src/test/: MsQuicTests.h
submodules/: CMakeLists.txt
(+18 files in other folders)
