[package]
name = "msquic"
version = "2.5.0-beta"
edition = "2018"
authors = ["Microsoft"]
description = "Microsoft implementation of the IETF QUIC protocol"
readme = "README.md"
repository = "https://github.com/microsoft/msquic/"
license = "MIT"
categories = ["network-programming", "asynchronous"]
keywords = ["quic", "network", "secure"]
build = "scripts/build.rs"
include = [
    "*/*.md",
    "/*.toml",
    "/cmake",
    "/CMakeLists.txt",
    "/LICENSE",
    "/submodules/CMakeLists.txt",
    "/submodules/openssl/*.*",
    "/submodules/openssl/apps",
    "/submodules/openssl/CHANGES",
    "/submodules/openssl/config",
    "/submodules/openssl/Configure",
    "/submodules/openssl/Configurations",
    "/submodules/openssl/crypto",
    "/submodules/openssl/engines",
    "/submodules/openssl/external",
    "/submodules/openssl/include",
    "/submodules/openssl/ms",
    "/submodules/openssl/os-dep",
    "/submodules/openssl/ssl",
    "/submodules/openssl/util",
    "/submodules/openssl/VMS",
    "/submodules/xdp-for-windows/published/external",
    "/scripts/build.rs",
    "/src/**/*.rs",
    "/src/bin",
    "/src/core",
    "/src/inc",
    "/src/generated",
    "/src/manifest",
    "/src/platform",
    "/THIRD-PARTY-NOTICES",
]

[features]
default = [ "std" ]
std = [ "dep:socket2" ]
schannel = []
static = []
preview-api = []
winkernel = []
# Overwrite generated binding by reruning the bindgen
overwrite = [ "dep:bindgen" ]

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.71", optional = true }

[dependencies]
bitfield = "0.17.0"
libc = { version = "0.2.0", default-features = false }
serde = { version = "1.0.117", default-features = false, features = ["derive"] }
ctor = "0.2.9"
socket2 = { version = "0.5.8", optional = true }
spin = "0.9.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Networking_WinSock"] }